--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,14 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
 default.sender=jvessoni@gmail.com
 default.recipient=jvessoni@gmail.com
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=jvessoni@gmail.com
+spring.mail.password=43g22lgo
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback = false
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.ssl.enable = true
