--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.mail.properties.mail.smtp.ssl.enable = true
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration=86400000
 
-aws.access_key_id=AKIAZOWN54HIXMGAMT55
-aws.secret_access_key=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
+aws.access_key_id=
+aws.secret_access_key=
 s3.bucket=curso-spring-ionic-juliano
 s3.region=sa-east-1
